--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,8 @@
-body {
-    margin: 40px 10px;
-    padding: 0;
-    font-family: "Lucida Grande",Helvetica,Arial,Verdana,sans-serif;
-    font-size: 14px;
-  }
+.container {
+  margin-bottom: 10px;
+}
 
-  #calendar {
-    max-width: 900px;
-    margin: 0 auto;
-  }
+#calendar {
+  max-width: 900px;
+  margin: 0 auto;
+}
